# POS_Snake

./: CMakeLists.txt  main.c
include/: menu.h  pipe.h  snake_game.h
src/: client.c  menu.c  pipe.c  server.c  snake_game.c
